@@ -1,4 +1,4 @@
-/* $Id: file.c,v 1.255 2010/07/18 14:10:09 htrb Exp $ */
+/* $Id: file.c,v 1.256 2010/07/19 09:00:34 htrb Exp $ */
 #include "fm.h"
 #include <sys/types.h>
 #include "myctype.h"
@@ -6347,7 +6347,7 @@ HTMLlineproc0(char *line, struct html_feed_environ *h_env, int internal)
 			is_hangul = wtf_is_hangul((wc_uchar *) str);
 		    else
 			is_hangul = 0;
-		    if (mode == PC_KANJI1 &&
+		    if (!SimplePreserveSpace && mode == PC_KANJI1 &&
 			!is_hangul && !prev_is_hangul &&
 			obuf->pos > h_env->envs[h_env->envc].indent &&
 			Strlastchar(obuf->line) == ' ') {
