@@ -1,3 +1,10 @@
+2010-07-19  d+w3m@vdr.jp
+
+	* [w3m-dev 04238] [patch] simple preserve space
+	* rc.c: Introduce option simple_preserve_space.
+	* fm.h: add global variable SimplePreserveSpace.
+	* file.c (HTMLlineproc0): check SimplePreserveSpace.
+
 2010-07-18 d+w3m@vdr.jp
 
 	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
@@ -10,6 +17,9 @@
 	* display.c (displayBuffer): use is_html_type() instead of strcasecmp().
 	* buffer.c (reshapeBuffer): use is_html_type() instead of strcasecmp().
 	* backend.c (internal_get): use is_html_type() instead of strcasecmp().
+	* main.c (vwSrc, reload, dispI, stopI): use is_html_type() instead of strcasecmp().
+	* proto.h: add is_html_type()
+	* url.c: add "xhtml" to DefaultGuess.
 
 2010-07-18 Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
@@ -8964,4 +8974,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.1008 2010/07/18 14:10:09 htrb Exp $
+$Id: ChangeLog,v 1.1009 2010/07/19 09:00:34 htrb Exp $
